--- a/public/pre-index.html
+++ b/public/pre-index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Hello @VERSION</title>
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    
+	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
 	<!-- @if DEBUG=true -->
 	<link rel="stylesheet" href="/css/main.css" />
